Working clicks and such.  Still need to remedy the $timeout issue.  Styling necessary.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8414,17 +8414,34 @@ body {
   width: 70%;
   margin: 25px auto; }
 
-.imageListItem {
-  width: 150px;
-  height: 150px;
+.add {
+  margin: 0 auto; }
+
+.imageList {
+  margin: 5px;
   display: inline-block;
-  text-align: center;
-  position: relative;
-  border: 1px solid #333433;
-  border-radius: 3px; }
-  .imageListItem img {
-    height: 100%;
-    width: 100%;
-    padding: 3%; }
+  position: relative; }
+  .imageList .imageListItem {
+    width: 150px;
+    height: 150px;
+    display: inline-block;
+    text-align: center;
+    position: relative;
+    border: 1px solid #333433;
+    border-radius: 3px; }
+    .imageList .imageListItem img {
+      height: 100%;
+      width: 100%;
+      padding: 2%; }
+    .imageList .imageListItem .click {
+      max-height: 50%;
+      position: absolute;
+      top: 15%;
+      left: 5%;
+      display: none; }
+      .imageList .imageListItem .click img {
+        max-width: 60%; }
+    .imageList .imageListItem .show {
+      display: inline-block; }
 
 /*# sourceMappingURL=main.css.map */
