--- a/app/templates/layout.tpl.html
+++ b/app/templates/layout.tpl.html
@@ -12,5 +12,8 @@
   </section>
 </nav>
 
+<div class="logoWrapper shadow1">
+  <img src="../images/Notstagram.jpg">
+</div>
 
 <section class="container" ui-view></section>
